# KickstartRT

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  NVIDIA_CLA_v1.0.1.txt  README.md
.github/workflows/: cla.yaml
cmake/: KickstartRT-binary-resource.cmake  KickstartRT-compileshaders.cmake  KickstartRT-core.cmake
docs/: SDK_Integration_Guide.md  SDK_Reference.md
include/: KickstartRT.h  KickstartRT_Interop_layer_d3d11.h  KickstartRT_common.h  KickstartRT_inl.h  KickstartRT_native_layer_d3d12.h  KickstartRT_native_layer_vk.h
interop_d3d11/: CMakeLists.txt
interop_d3d11/src/: Component.cpp  DLLMain.cpp  ExecuteContext.cpp  ExecuteContext.h  Log.cpp  Log.h  PersistentWorkingSet.cpp  PersistentWorkingSet.h  Platform.h  TaskContainer.cpp  TaskContainer.h
resources/: _BlueNoiseTexture.rc
shaders/: CMakeLists.txt  _ShaderResource_SPIRV.rc  shaders.cfg
shaders/Denoising/NRD/: ConversionLayer_CS.hlsl
shaders/Denoising/NRD/Placeholder/: NRD.hlsli
shaders/DirectLightingCache/: Allocation_TrianglesIndexed_cs.hlsl  CTA_Swizzle.hlsli  DirectLightingCache.hlsli  GBuffer_functions.hlsli  Injection_Clear_CS.hlsl  Injection_rt.hlsli  Injection_rt_CS.hlsl  Injection_rt_LIB.hlsl  Reflection_AO_rt.hlsli  Reflection_AO_rt_CS.hlsl  Reflection_AO_rt_LIB.hlsl  Reflection_Bindings.hlsli  Reflection_DebugVis_rt.hlsli  Reflection_DebugVis_rt_CS.hlsl  Reflection_DebugVis_rt_LIB.hlsl  Reflection_GI_rt.hlsli  Reflection_GI_rt_CS.hlsl  Reflection_GI_rt_LIB.hlsl  Reflection_rt.hlsli  Reflection_rt_CS.hlsl  Reflection_rt_LIB.hlsl  Shadows_rt.hlsli  Shadows_rt_CS.hlsl  Shadows_rt_LIB.hlsl  Transfer_rt.hlsli  Transfer_rt_CS.hlsl  Transfer_rt_LIB.hlsl  brdf.h  rng.hlsl
shaders/Shared/: Binding.hlsli  Shared.hlsli
signatures/: CLA.json
src/: BVHTasks.cpp  Component.cpp  Component.h  DLLMain.cpp  DenoisingContext.cpp  DenoisingContext.h  ExecuteContext.cpp  ExecuteContext.h  Geometry.cpp  Geometry.h  Handle.h  Log.cpp  Log.h  OS.h  PersistentWorkingSet.cpp  PersistentWorkingSet.h  Platform.h  RenderPass_Common.h  RenderPass_Denoising.cpp  RenderPass_Denoising.h  RenderPass_DirectLightingCacheAllocation.cpp  RenderPass_DirectLightingCacheAllocation.h  RenderPass_DirectLightingCacheDenoising.cpp  RenderPass_DirectLightingCacheDenoising.h  RenderPass_DirectLightingCacheInjection.cpp  RenderPass_DirectLightingCacheInjection.h  RenderPass_DirectLightingCacheReflection.cpp  RenderPass_DirectLightingCacheReflection.h  RenderTaskValidator.cpp  RenderTaskValidator.h  ResourceLogger.cpp  ResourceLogger.h  Scene.cpp  Scene.h  SceneContainer.cpp  SceneContainer.h  ShaderFactory.cpp  ShaderFactory.h  ShaderTableRT.cpp  ShaderTableRT.h  (+17 more)
src/GraphicsAPI/: GraphicsAPI.cpp  GraphicsAPI.h  GraphicsAPI_Utils.h
src/common/: Arch.h  CRC.cpp  CRC.h  SDKDefines.h  ShaderBlob.cpp  ShaderBlob.h  ShaderBlobEntry.h
tools/ShaderCompiler/: CMakeLists.txt  Options.cpp  Options.h  ShaderCompiler.cpp
